# SceneCognition

app/: CMakeLists.txt
app/src/main/cpp/: fpi_video_mace_interface.cpp  fpi_video_mace_interface.h  mace_jni.cpp  mace_jni.h
app/src/main/java/com/tcl/recognize/tv/: RecognizeTask.java
app/src/main/java/com/tcl/recognize/util/: Constant.java
app/src/main/java/com/tcl/weilong/mace/: AppModel.java  DelInput.java  JniUtils.java  MaceClassifier.java
